# CuPPy

./: MIP1.py  README.md  api-objects.txt  coinor.cuppy-module.html  coinor.cuppy-pysrc.html  coinor.cuppy.genericSeparation-module.html  coinor.cuppy.instances.MIP1-module.html  coinor.cuppy.instances.MIP2-module.html  coinor.cuppy.instances.MIP5-pysrc.html  coinor.cuppy.instances.MIP6-module.html  coinor.cuppy.instances.MIP7-module.html  coinor.cuppy.instances.MIP8-pysrc.html  coinor.cuppy.milpInstance.MILPInstance-class.html  cuttingPlanes.html  genericSeparation.html  gomoryCut.py  help.html  identifier-index.html  index.html  milpInstance.html  module-tree.html  pyproject.toml  setup.py  toc-coinor.cuppy-module.html  toc-coinor.cuppy.cuttingPlanes-module.html  toc-coinor.cuppy.instances.MIP1-module.html  toc-coinor.cuppy.instances.MIP2-module.html  toc-coinor.cuppy.instances.MIP4-module.html  toc-coinor.cuppy.instances.MIP5-module.html  toc-coinor.cuppy.instances.MIP6-module.html  toc-coinor.cuppy.instances.MIP8-module.html  toc-everything.html  toc.html
docs/html/: class-tree.html  coinor.cuppy.cuttingPlanes-module.html  coinor.cuppy.cuttingPlanes-pysrc.html  coinor.cuppy.genericSeparation-pysrc.html  coinor.cuppy.genericSeparation.GenericSeparation-class.html  coinor.cuppy.instances-module.html  coinor.cuppy.instances-pysrc.html  (+20 more)
examples/: MIP1.html  MIP10.html  MIP2.html  MIP3.html  MIP4.html  MIP5.html  MIP6.html  MIP7.html  MIP8.html  MIP9.html  index.html
instances/: MIP2.py  MIP3.py  MIP5.py  MIP6.py  MIP8.py
src/: gomoryCut.py
test/: test_cuppy.py
(+33 files in other folders)
